fix(配置): 更新首页链接和名称配置
- 将 landingPageURL 从硬编码值更新为有效路径 "/Cloud189AutoSaveProDoc/"
- 添加 landingPageName 配置项为 "首页"
- 简化菜单模板中的条件判断逻辑，移除多余的多语言检查

--- a/hugo.toml
+++ b/hugo.toml
@@ -21,4 +21,5 @@ home = ["HTML", "RSS"]
 
 [params]
 custom_css = ["css/custom.css"]
-landingPageURL = "123"
+landingPageName = "首页"
+landingPageURL = "/Cloud189AutoSaveProDoc/"
